z-index fix

--- a/src/main/resources/static/diagramER/diagramER.css
+++ b/src/main/resources/static/diagramER/diagramER.css
@@ -548,10 +548,14 @@ fieldset{
 	resize: none;
 }
 
-
-
-
-
 #feedback-dialog{
 	overflow: hidden;
+}
+
+#diagram_verticalScale{
+	z-index: 10 !important;
+}
+
+#diagram_horizontalScale{
+	z-index: 10 !important;
 }
