--- a/src/main/resources/static/sidebar/common/style.css
+++ b/src/main/resources/static/sidebar/common/style.css
@@ -8258,7 +8258,7 @@ h1, h2, h3, h4, h5,
 #sidebar .custom-menu {
   display: inline-block;
   position: absolute;
-  z-index: 9999999;
+  z-index: 10;
   top: 27px;
   right: 0;
   margin-right: -58px;
